fixed header visibility error

--- a/src/styles/_content.scss
+++ b/src/styles/_content.scss
@@ -1,3 +1,6 @@
+main {
+    margin-top: -20px;
+}
 
 .red-button {
     background-color: #fa6c65;
